# ccd-redeem

./: .gitignore  Cargo.toml  README.md
backend/: Cargo.toml
frontend/: .gitignore  package.json
frontend/src/: vite-env.d.ts
frontend/src/components/App/: App.tsx  Connection.tsx  Constants.tsx  HomePage.tsx  RedeemCoin.tsx  checkSeed.tsx  coinSignature.ts  index.ts
seed-generator/: .gitignore  README.md  basic-generator.py  coin-seeds.json  generator.py  qr-coin-seeds.json  qr-generator.py  qr-reprint-labels.py  qr-sc-input.json  sc-input.json
seed-generator/style/: coin_template.html  coin_template2.html  style.css  style2.css
smart-contract/: Cargo.toml  LICENSE  ccd_redeem_schema.json  deploy.sh  example-coins.json  init.json  init.sh  issue_coins.json  issue_coins.sh  view_state.sh
smart-contract/src/: lib.rs
smart-contract/tests/: tests.rs
src/: lib.rs
tests/: tests.rs
