# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "ccd_redeem"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
authors = [ "Concordium scientists" ]
description = "Convert your physical ccd coin to ccds in your wallet"

[features]
default = ["std"]
std = ["concordium-std/std", "concordium-cis2/std"]
wee_alloc = ["concordium-std/wee_alloc"]

[dependencies]
concordium-cis2 = {version = "5.0", default-features = false}
concordium-std = {version = "8.0", default-features = false}

[dev-dependencies]
concordium-smart-contract-testing = "3.0"

[lib]
crate-type=["cdylib", "rlib"]

[profile.release]
opt-level = "s"
codegen-units = 1
